force-app/main/default/objects/Project__c/fields/Head_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Project</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>