force-app/main/default/objects/Project__c/fields/Project_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Project_Purpose__c</fullName>
    <label>Project Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Scientific</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>