force-app/main/default/objects/Project__c/validationRules/Head_of_Project_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Head_of_Project_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( Company__c ), false,  IF(ISBLANK( Head_of_Project__c ), true, false) )</errorConditionFormula>
    <errorDisplayField>Head_of_Project__c</errorDisplayField>
    <errorMessage>If company selected, Head of project must be filed</errorMessage>
</ValidationRule>